# freightbid_agent

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  FreightBid Agent Project Book.docx  LICENSE  README.md  docker-compose.yml  feasibility.py  load_evaluation.py  pyproject.toml  requirements.txt  test_recommend_loads.py  ~$eightBid Agent Project Book.docx
FreightBid_Agent/: ~$eightBid Agent Project Book.docx  ~WRL0003.tmp
application/: bid_approval_service.py  bid_recommender.py  config_loader.py  destination_desirability_service.py  ev_bid_recommender.py  evaluate_loads.py  ortools_destination_aware_planner.py  ortools_distance_planner.py  ortools_planner.py  ortools_profit_aware_planner.py  plan_builder.py  planner.py  recommend_loads.py
artifacts/: compiled_dispatcher_dataset_summary.json  production_readiness_summary.json  production_readiness_transcript.md  teacher_trace_summary.json
benchmarks/: README.md  bench_scenarios.py  bench_scoring.py  bid_recommender_summary.json  broker_quality_stress_summary.json  calibration_monitor_summary.json  chart_bid_recommender.py  chart_broker_quality_stress.py  chart_calibration_monitor.py  chart_comparison.py  chart_compiled_dispatcher_results.py  chart_fleet_dispatch.py  chart_pareto.py  chart_recalibration_workflow.py  chart_results.py  chart_risk_aware_stress.py  chart_rolling_replay.py  chart_stress_test.py  compare_planners.py  compare_results.json  compiled_dispatcher_stress_summary.json  conftest.py  context_cost_summary.json  fleet_dispatch_summary.json  pareto.py  recalibration_workflow_summary.json  (+20 more)
(+225 files in other folders)
