[project]
name = "freightbid-agent"
version = "0.1.0"
description = "Phase 1 deterministic dispatch brain (FreightBid)."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.9",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0",
  "psycopg2-binary>=2.9",
  "typer>=0.12",
  "rich>=13.8",
  "httpx>=0.27",
  "ortools>=9.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]
postgres = ["psycopg2-binary>=2.9.10"]

[project.scripts]
freightbid = "adapters.inbound.cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["domain*", "ports*", "adapters*", "application*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
